fix: Update title in input state of zap dialog to be more concise

--- a/src/app/components/zap-dialog/zap-dialog.component.html
+++ b/src/app/components/zap-dialog/zap-dialog.component.html
@@ -3,7 +3,7 @@
   @if (currentState() === 'input') {
     <h2 mat-dialog-title>
       <mat-icon>bolt</mat-icon>
-      Send Lightning Zap
+      Zap
       @if (data.recipientName) {
         to {{ data.recipientName }}
       }
