style: Remove margin-left from mat-sidenav-content for improved layout consistency

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -395,7 +395,7 @@ mat-sidenav-content {
   border: none !important;
   width: 100%;
   text-align: left;
-  margin-left: 16px; // Add some margin for better visual separation
+  // margin-left: 16px;
 }
 
 .child-label {
