--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -26,10 +26,16 @@
         <div class="feed-tabs">
           @if (isMobileView()) {
           <div class="mobile-selectors">
-            <button mat-stroked-button [matMenuTriggerFor]="feedMenu">
+            <button mat-button [matMenuTriggerFor]="feedMenu">
               <mat-icon>{{ feedIcon() }}</mat-icon>
               {{ feedLabel() }}
             </button>
+
+            /
+            <!-- Hierarchy separator -->
+            <!-- <div class="hierarchy-separator">
+              <mat-icon>chevron_right</mat-icon>
+            </div> -->
 
             <mat-menu #feedMenu="matMenu">
               @for (feed of feeds(); track feed.id) {
@@ -65,7 +71,7 @@
             <!-- Feed Selector for Mobile -->
             @if (columns().length > 0) {
             <div class="column-selector-container">
-              <button mat-stroked-button [matMenuTriggerFor]="columnMenu">
+              <button mat-button [matMenuTriggerFor]="columnMenu">
                 <mat-icon>{{ columns()[visibleColumnIndex()].icon }}</mat-icon>
                 {{ columns()[visibleColumnIndex()].label }}
               </button>
